--- a/socketio101/server/package.json
+++ b/socketio101/server/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async-limiter": "^2.0.0",
-    "ws": "^8.4.2"
+    "socket.io": "^4.4.1"
   }
 }
